* compile.c (rb_iseq_compile_node): put start label of block after   trace (b_call).   [Bug #9964] * test/ruby/test_settracefunc.rb: add a test.   added assert_consistent_call_return() method check call/return   consistency.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46471 b2dd03c8-39d4-4d8f-98ff-823fe69b080e